<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.OnboardFragment">

    <ImageView
        android:id="@+id/imRound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="1dp"
        android:src="@drawable/round"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvOnboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        app:layout_constraintTop_toTopOf="@id/imRound"
        app:layout_constraintBottom_toBottomOf="@id/imRound"
        app:layout_constraintStart_toStartOf="@id/imRound"
        app:layout_constraintEnd_toEndOf="@id/imRound"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="15sp"
        android:text="@string/firs_recommendation"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/imCameras"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/cameras"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/back"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>